# MiniVulkanTriangle

./: CMakeLists.txt  main.cpp  readme.md
shaders/: geom.spv  shader.geom  shader.vert  vert.spv
